This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance.
============================================================================
3/28/19: Added script commands to change and restore low dose parameters and
to impose current scope settings on a low dose area.

3/28/19: Moved option for antialias reduction on all shots for K2/K3 from
dialog to Camera - Special Options submenu and set it on if it was off
before this change.

3/28/19: Added support for correlated double sampling in K3.

3/28/19: Allowed LongOperation to return time since last operation.

3/23/19: SEM_3-7-3
3/23/19: Added version function to SEMCCD that can return build (In 3.7).

3/22/19: Fixed acquisition from FEI STEM, which was passing exposure time
instead of pixel time to the plugin. This was broken for running remotely
through plugin/server in SerialEM 3.5.0 beta 12/23/14, and for running locally
(on the scope PC) in 3.6.0 beta 10/18/15.  After upgrading from a broken
version, camera timing and flyback times need to be recalibrated, and the
actual exposure produced by the camera parameter sets will be different.
(In 3.7).

3/19/19: Added hole number and position in hole to mdoc files when using
MultipleRecords (In 3.7).

3/19/19: Made program appear DPI-aware to Windows 10, fixed problems with
length of closed-up control panels when floating them with a high DPI, and
made the small fonts be scaled properly by DPI (In 3.7).

3/19/19: Fixed scripting when assigning to variables starting with "set" (In
3.7).

3/19/19: Fixed crashes opening or closing program with window too small (In
3.7).

3/11/19: Added collection of script commands for reading and writing text
files line by line.

3/11/19: Changed distortion pair routine to use the expected shift when
correlating between the two images of a pair.

3/11/19: Made zoom be remembered separately for View and Search images.
